--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   color: #333;
 }
 
@@ -10,4 +10,8 @@ img {
 
 * {
   box-sizing: border-box;
+}
+
+a {
+  color: $mainOrange;
 }
