--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -4,10 +4,14 @@
   @mixin atMedium {
     padding: 4.5rem 0;
   }
-  
 
   &--blue {
     background-color: $mainBlue;
-    color: #FFF;
+    color: #fff;
+  }
+
+  &--testimonials {
+    background: url("assets/images/testimonials-bg.jpg") top center no-repeat;
+    background-size: cover;
   }
 }
