--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -1,25 +1,48 @@
 .primary-nav {
-  &--pull-right {
-    float: right;
+  padding-top: 10px;
+
+  @mixin atMedium {
+    padding-top: 0;
   }
 
   ul {
     margin: 0;
     padding: 0;
-    @mixin clearfix {
-    }
   }
 
   li {
     list-style: none;
-    float: left;
-    padding-right: 20px;
+    display: inline-block;
+    padding-right: 7px;
     padding: 12px 20px 12px 0;
+
+    @mixin atMedium {
+      padding-top: 0;
+      padding-right: 20px;
+    }
+  }
+
+  li:last-child {
+    padding-right: 0;
+
+    @mixin atMedium {
+      padding-right: 20px;
+    }
   }
 
   a {
     color: #fff;
     font-weight: 300;
     text-decoration: none;
+    display: block;
+    padding: 5px 8px;
+    font-size: 0.8rem;
+    background-color: rgba($mainBlue, 0.3);
+
+    @mixin atMedium {
+      padding: 12px 0;
+      font-size: 1rem;
+      background-color: transparent;
+    }
   }
 }
