--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -3,13 +3,20 @@
   z-index: 2;
   width: 100%;
   padding: 10px 0;
+  transition: background-color 0.3s ease-out;
+
+  &--is-expanded {
+    background-color: rgba($mainBlue, 0.55);
+  }
 
   @mixin atMedium {
     background-color: rgba($mainBlue, 0.3);
   }
 
   &__btn-container {
-    float: right;
+    @mixin atMedium {
+      order: 2;
+    }
   }
 
   &__logo {
@@ -29,22 +36,89 @@
 
   &__menu-icon {
     width: 20px;
-    height: 20px;
-    background-color: #fff;
+    height: 19px;
+    z-index: 10;
     position: absolute;
     top: 10px;
     right: 10px;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 20px;
+      height: 3px;
+      background-color: #fff;
+      transform-origin: 0 0;
+      transition: transform 0.3s ease-out;
+    }
+
+    &__middle {
+      position: absolute;
+      top: 8px;
+      left: 0;
+      width: 20px;
+      height: 3px;
+      background-color: #fff;
+      transform-origin: 0 50%;
+      transition: all 0.3s ease-out;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 20px;
+      height: 3px;
+      background-color: #fff;
+      transform-origin: 0 100%;
+      transition: transform 0.3s ease-out;
+    }
 
     @mixin atMedium {
       display: none;
     }
   }
 
+  &__menu-icon--close-x {
+    &::before {
+      transform: rotate(45deg) scaleX(1.25);
+    }
+
+    &::after {
+      transform: rotate(-45deg) scaleX(1.25) translateY(1px);
+    }
+
+    .site-header__menu-icon__middle {
+      opacity: 0;
+      transform: scaleX(0);
+    }
+  }
+
   &__menu-content {
-    display: none;
+    opacity: 0;
+    transition: all 0.3s ease-out;
+    transform: scale(1.2);
+    position: relative;
+    z-index: -10;
+    padding-top: 95px;
+    text-align: center;
 
     @mixin atMedium {
-      display: block;
+      display: flex;
+      justify-content: flex-end;
+      opacity: 1;
+      z-index: 1;
+      padding-top: 0;
+      transform: scale(1);
+    }
+
+    &--is-visible {
+      opacity: 1;
+      z-index: 1;
+      transform: scale(1);
     }
   }
 }
