--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -11,6 +11,11 @@
 
   @mixin atMedium {
     background-color: rgba($mainBlue, 0.3);
+    position: fixed;
+
+    &--dark {
+      background-color: rgba(23, 51, 72, 0.85);
+    }
   }
 
   &__btn-container {
@@ -25,12 +30,18 @@
     background-color: $mainBlue;
     padding: 13px 29px;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(-50%) scale(0.8);
+    transform-origin: 50% 0;
 
     @mixin atMedium {
       left: auto;
       transform: translateX(0);
       padding: 25px 36px;
+      transition: transform 0.3s ease-out;
+
+      .site-header--dark & {
+        transform: scale(0.54);
+      }
     }
   }
 
